[gd_scene load_steps=8 format=3 uid="uid://hw3ny2uv07pc"]

[ext_resource type="Script" path="res://bullets/poison.gd" id="1_suhxs"]
[ext_resource type="Texture2D" uid="uid://bbj46h6oi8wbm" path="res://bullets/sprites/11122.png" id="2_am2uu"]
[ext_resource type="Texture2D" uid="uid://bl1gkve8qin0u" path="res://bullets/sprites/1111.png" id="2_tdwll"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bl3j5"]
radius = 24.0

[sub_resource type="Animation" id="Animation_mdpiv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gbds5"]
resource_name = "glass"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ib3q3"]
_data = {
"RESET": SubResource("Animation_mdpiv"),
"glass": SubResource("Animation_gbds5")
}

[node name="poison" type="Area2D"]
z_index = 1
script = ExtResource("1_suhxs")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(8, -8)
scale = Vector2(0.0429405, 0.0412371)
texture = ExtResource("2_tdwll")
hframes = 7

[node name="Sprite2D4" type="Sprite2D" parent="."]
visible = false
position = Vector2(1.99999, -2.00001)
scale = Vector2(0.17, 0.15)
texture = ExtResource("2_am2uu")
hframes = 7
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bl3j5")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.35

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ib3q3")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
